# Bing-Wallpaper

./: .coverageignore  .gitignore  CMakeLists.txt  LICENSE  README.md  build-executables.sh  go.mod  go.sum  main.go  main_test.go  platform_darwin.go  platform_darwin_test.go  platform_linux.go  platform_linux_test.go  platform_windows.go  platform_windows_test.go  resources.qrc
.github/: dependabot.yaml
.github/workflows/: release.yml  run-tests.yaml
packaging/linux/: bing-wallpaper.desktop  package.sh
packaging/macos/: Info.plist.in  package.sh
packaging/windows/: installer.iss  resource.rc.in
src/: BingClient.cpp  BingClient.h  Installer.cpp  Installer.h  TrayController.cpp  TrayController.h  WallpaperSetter.cpp  WallpaperSetter.h  main.cpp
tests/: CMakeLists.txt  tst_BingClient.cpp  tst_WallpaperSetter.cpp
